# HVAC_Panel

./: CMakeLists.txt  README.md  main.qml  qml.qrc
Common/: AutoButton.qml  BlowerItem.qml  CustomButton.qml  DrvOnlyButton.qml  IconButton.qml  TextButton.qml
Components/: BlowerItem.qml  BtnCtrlArea.qml  Dashboard.qml  IconButton.qml  SeatLeftArea.qml  SeatRightArea.qml  TempDisplay.qml
Pkg/: Common.h
Pkg/Controller/Blower/: BlowerCtrl.cpp  BlowerCtrl.h
Pkg/Models/Blower/: BlowerModel.cpp  BlowerModel.h
Pkg/Models/Btn/: BtnModel.cpp  BtnModel.h
Pkg/Models/SeatMode/: SeatModeModel.cpp  SeatModeModel.h
Pkg/Models/TempSide/: TempSideModel.cpp  TempSideModel.h
Pkg/Platform/SocketCAN/: CanDB.cpp
Pkg/Platform/SocketCAN/Common/: CNF_CAN.h  Common.h
Pkg/Platform/SocketCAN/GenCANStruct/: genCanConfig.py
Pkg/Platform/SocketCAN/GenCANStruct/cfg/: config.json
Pkg/Platform/SocketCAN/GenCANStruct/templates/: define_can_template.jinja  macros.jinja
js/: utils.js
